--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@lazorkit/wallet": "^2.0.1",
+    "@lazorkit/wallet-mobile-adapter": "^1.5.1",
     "@solana/web3.js": "^1.98.4",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
