--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@coral-xyz/anchor": "^0.31.1",
     "@lazorkit/wallet": "^2.0.1",
     "@lazorkit/wallet-mobile-adapter": "^1.5.1",
+    "@phosphor-icons/react": "^2.1.10",
     "@solana/web3.js": "^1.98.4",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
