--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lazorkit/wallet": "^2.0.1",
     "@lazorkit/wallet-mobile-adapter": "^1.5.1",
     "@phosphor-icons/react": "^2.1.10",
+    "@solana/spl-memo": "^0.2.5",
     "@solana/spl-token": "^0.4.0",
     "@solana/web3.js": "^1.98.4",
     "framer-motion": "^12.23.26",
