--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
